(library
 (name mra_bi_assembler)
 (modules asm_lexer asm_parser)
 (libraries asm_types menhirLib menhirCST))

(menhir
 (modules asm_parser)
 (flags --unparsing --table))

(ocamllex
 (modules asm_lexer))

(library
  (name asm_types)
  (modules asm_types)
  (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
