(library
 (name spec)
 (public_name mra_bi_assembler.spec)
 (modules common parse)
 (libraries ppx_deriving_yojson.runtime angstrom faraday containers)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_deriving_yojson)))

(documentation
 (package mra_bi_assembler)
 (mld_files :standard))
