(library
 (name expect_tests)
 (modules test_unparse test_parse test_dnf)
 (libraries mra_bi_assembler.lang spec_files)
 (inline_tests (flags -verbose))
 (preprocess (pps ppx_expect)))

(library
 (name unit_tests)
 (modules unit_tests)
 (libraries mra_bi_assembler.lang spec_files)
 (inline_tests (flags -verbose))
 (preprocess (pps ppx_inline_test)))
