(library
 (name lang)
 (public_name mra_bi_assembler.lang)
 (modules common parse analysis lang types)
 ; (ocamlc_flags (:standard -i))
 (libraries ppx_deriving_yojson.runtime angstrom faraday containers)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_deriving_yojson)))

(documentation
 (package mra_bi_assembler)
 (mld_files :standard))

(mdx
 (libraries mra_bi_assembler.lang))
